fix pic stretch, add more responsiveness to detail page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,13 @@
 @tailwind utilities;
 
 h1 {
-    @apply font-serif text-7xl;
+    @apply text-7xl;
 }
 h2 {
     @apply text-2xl;
 }
-h3 {
+h3,
+caption {
     @apply text-2xl text-blue-700 font-semibold;
 }
 p {
@@ -23,7 +24,7 @@ p {
     }
 }
 .card {
-    @apply text-center p-4 flex-none transition duration-500 ease-in-out hover:shadow-2xl;
+    @apply text-center p-4 flex flex-col transition duration-500 ease-in-out hover:shadow-2xl;
     width: 300px;
     min-width: 300px;
 }
@@ -36,9 +37,6 @@ p {
 th,
 td {
     @apply p-2;
-}
-tr td:first-of-type {
-    font-weight: bold;
 }
 tr:nth-child(even) {
     @apply bg-blue-100;
